--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">UberClone</string>
     <string name="title_activity_welcome">Map</string>
+    <string name="google_direction_api">AIzaSyBCLLAzoMaQwgWLQjivGonTVFvHPURNQ0M</string>
 </resources>
